Update login flow and add splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get: ^4.6.5
   http: ^0.13.6
   get_storage: ^2.0.0
+  easy_splash_screen: ^1.0.4
 
 dev_dependencies:
   flutter_test:
