--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   get_storage: ^2.0.0
   easy_splash_screen: ^1.0.4
   floating_action_bubble: ^1.1.4
+  dropdown_search: ^5.0.6
+  searchfield: ^0.9.2
 
 dev_dependencies:
   flutter_test:
