--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   floating_action_bubble: ^1.1.4
   dropdown_search: ^5.0.6
   searchfield: ^0.9.2
-  dropdown_button2: ^2.3.9
+  image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
