--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,6 +24,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>O Aplicativo precisa de permissão para acessar a câmera. Isso é necessário para realizar o registro.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>O aplicativo precisa de permissão para acessar sua galeria e biblioteca de imagens.</string>
+	<key>com.apple.security.files.user-selected.read-only</key>
+  	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
