--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   searchfield: ^0.9.2
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  connectivity_plus: ^5.0.2
 
 dev_dependencies:
   flutter_test:
