--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   path: ^1.8.3
   connectivity_plus: ^5.0.2
   jwt_decoder: ^2.0.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
