--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   shimmer: ^3.0.0
   intl: ^0.19.0
-  tutorial_coach_mark: ^1.2.11
+  showcaseview: ^2.0.3
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
 
