--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^3.0.0
   intl: ^0.19.0
   showcaseview: ^2.0.3
+  coachmaker: ^0.2.1
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
 
