--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,8 @@ dependencies:
   jwt_decoder: ^2.0.1
   shimmer: ^3.0.0
   intl: ^0.19.0
+  awesome_notifications: ^0.9.2
   showcaseview: ^2.0.3
-  coachmaker: ^0.2.1
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
 
