--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,10 @@ dependencies:
   jwt_decoder: ^2.0.1
   shimmer: ^3.0.0
   intl: ^0.19.0
-  awesome_notifications: ^0.9.2
   showcaseview: ^2.0.3
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^9.9.1
 
 
 dev_dependencies:
