--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_local_notifications: ^9.9.1
   fl_chart: ^0.64.0
   flutter_svg: ^2.0.9
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
