--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   fl_chart: ^0.64.0
   flutter_svg: ^2.0.9
   badges: ^3.1.2
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
