Change package and Bundle name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: formapp
+name: ucif
 description: Credenciamento de familias distribuidas de forma organizada e de fácil navegação.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
