--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBsmh9kvW4p_BbU59Spw8TQfSqs9qSZyxc</string>
+	<string>AIzaSyBB_4Xei5vIfFBNIUt-xsefC5REytf91xs</string>
 	<key>GCM_SENDER_ID</key>
-	<string>583893302729</string>
+	<string>357309654279</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>br.com.wip.formapp</string>
+	<string>br.com.ucif</string>
 	<key>PROJECT_ID</key>
-	<string>credenciado-943e8</string>
+	<string>br-com-ucif-57b91</string>
 	<key>STORAGE_BUCKET</key>
-	<string>credenciado-943e8.appspot.com</string>
+	<string>br-com-ucif-57b91.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:583893302729:ios:3814e0ceea28d48e817c18</string>
+	<string>1:357309654279:ios:62ac950fbdb747c05051a2</string>
 </dict>
 </plist>
