--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:583893302729:ios:3814e0ceea28d48e817c18",
-  "FIREBASE_PROJECT_ID": "credenciado-943e8",
-  "GCM_SENDER_ID": "583893302729"
+  "GOOGLE_APP_ID": "1:357309654279:ios:62ac950fbdb747c05051a2",
+  "FIREBASE_PROJECT_ID": "br-com-ucif-57b91",
+  "GCM_SENDER_ID": "357309654279"
 }
