--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:357309654279:ios:f70974ddb249890c5051a2",
-  "FIREBASE_PROJECT_ID": "br-com-ucif-57b91",
-  "GCM_SENDER_ID": "357309654279"
+  "GOOGLE_APP_ID": "1:762390064615:ios:592584edb0c7795fcce142",
+  "FIREBASE_PROJECT_ID": "br-com-app-ucif",
+  "GCM_SENDER_ID": "762390064615"
 }
