--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,7 +67,7 @@ android {
        release {
         keyAlias keystoreProperties['keyAlias']
         keyPassword keystoreProperties['keyPassword']
-        storeFile file('/Users/claudineifernandes/Downloads/formapp/android/app/upload-keystore.jks')
+        storeFile file('C:/flutterprojects/formapp/android/app/upload-keystore.jks')
         storePassword keystoreProperties['storePassword']
        }
    }
