--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^9.9.1
-  fl_chart: ^0.64.0
-  flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.6
   badges: ^3.1.2
   flutter_staggered_animations: ^1.1.1
   rename: ^3.0.2
