--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_speed_dial: ^7.0.0
   package_info_plus: ^5.0.0
+  cached_network_image: ^3.3.1
   
 
 dev_dependencies:
