--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   package_info_plus: ^5.0.0
   cached_network_image: ^3.3.1
+  multi_select_flutter: ^4.1.3
   
 
 dev_dependencies:
