--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   package_info_plus: ^9.0.0
   cached_network_image: ^3.3.1
   multi_select_flutter: ^4.1.3
+  flutter_localization: ^0.3.3
   
 
 dev_dependencies:
